# OpenGLProject

./: .gitignore  Buffers.h  Bullet.h  CMakeLists.txt  CameraClass.h  Inputs.h  Lights.h  Model.h  Objects.h  OpenGLProject.sln  OpenGLProject.vcxproj  OpenGLProject.vcxproj.filters  README.md  ShaderClass.h  Text.h  glad.c  glad.h  imgui.ini  main.cpp  vcpkg.json
Headers/: Application.h  CameraClass.h  Inputs.h  Lights.h  Map.h  Model.h  Objects.h  ShaderClass.h  SimpleGeometry.h  TexturesHeader.h  mesh.h
Shader/: FS_lightShader.glsl  FS_mapShader.glsl  VS_mapShader.glsl  WaterShader.fs  lightShader.fs  lightShader.vs  mapShader.fs  planetShader.fs  planetShader.vs  planetWaterShader.fs  planetWaterShader.vs  shader.fs  shader.vs
assets/models/Box/: Box.mtl
assets/models/Robot/: LilRobot.mtl
assets/models/Room/: room.mtl
assets/models/moutain/: moutain.mtl
assets/models/plateform/: plateform.mtl
src/: Application.cpp  Application.h  CameraClass.cpp  CameraClass.h  Cubesphere.cpp  Cubesphere.h  Gui.h  Inputs.h  Lights.cpp  Lights.h  Map.cpp  Map.h  Model.cpp  Model.h  Objects.h  Player.cpp  Player.h  ShaderClass.cpp  ShaderClass.h  SimpleGeometry.h  SkyBox.cpp  SkyBox.h  mesh.cpp  mesh.h
src/Headers/: Application.h  CameraClass.h  Lights.h  Map.h  Model.h  Player.h  ShaderClass.h  SkyBox.h  mesh.h
x64/Debug/: OpenGLProject.exe.recipe  OpenGLProject.ilk  OpenGLProject.vcxproj.FileListAbsolute.txt  vc143.idb
x64/Debug/OpenGLProject.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGLProject.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
